--- a/coder.html
+++ b/coder.html
@@ -6,8 +6,11 @@
     <title>帝景吧</title>
    <link rel="stylesheet" type="text/css" href="style.css">
     <style type="text/css">
-    	#content p{text-align: center;font-size:16px;line-height: 1.5;}
-    	.codeImg{padding-top:8%;}
+    	#content{width:100%;position: absolute;left:50%;top:44%;transform: translate(-50%,-50%);}
+    	#content p{text-align:center;color: #000;
+    font-size: .8rem;
+    line-height: 1.4rem;
+    padding: 0 .75rem;}
     	.codeImg img{width:70%;max-width: 430px;max-height:430px;}
     </style>
     <script type="text/javascript">
@@ -35,7 +38,7 @@
     </script>
 </head>
 <body>
-	<div id="content">
+	<div id="content" class='font_msg'>
 		<p class="codeImg">
 			<img src="http://djb.80h-tv.com/images/qrcode.jpg" title="长按识别二维码" alt="长按识别二维码" />
 		</p>
