--- a/coder.html
+++ b/coder.html
@@ -7,10 +7,7 @@
    <link rel="stylesheet" type="text/css" href="style.css">
     <style type="text/css">
     	#content{width:100%;position: absolute;left:50%;top:44%;transform: translate(-50%,-50%);}
-    	#content p{text-align:center;color: #000;
-    font-size: .8rem;
-    line-height: 1.4rem;
-    padding: 0 .75rem;}
+    	#content p{text-align:center;color: #000;font-size: .8rem;line-height: 1.4rem;padding: 0 .75rem;}
     	.codeImg img{width:70%;max-width: 430px;max-height:430px;}
     </style>
     <script type="text/javascript">
@@ -53,7 +50,7 @@
 		</p>
 	</div>
 	<footer class="read">
-		素材来源于网络，版权归原作者所有
+		<a href="copyright.html">素材来源于网络，版权归原作者所有</a>
 	</footer>
 
 </body>
